--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "neto-template",
   "version": "1.0.0",
-  "description": "",
-  "main": "",
+  "description": "1. Clone\r 1. Run `npm install`\r 1. Run `npm start`\r 1. (extra) for test run `npm test`",
+  "main": "webpack.config.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "test": "jest",
@@ -51,5 +51,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "core-js": "^3.1.3"
+  },
+  "directories": {
+    "test": "test"
   }
 }
